First draft of full assignment 3 functionality. Command file is appended to for every state change, read/executed when a memento is restored, and is deleted when a new memento is stored. TestCommandDecorator confirms working code for commands. Miscellaneous cleanup code added/changed.

--- a/.project
+++ b/.project
@@ -12,6 +12,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.quest.toadext.ToadextNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
